[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "slocum-tpw"
dynamic = ["version"]
description = "TWR Slocum glider data processing utilities"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
authors = [
    {name = "Pat Welch", email = "pat@mousebrains.com"},
]
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "gsw",
    "netcdf4",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
slocum-tpw = "slocum_tpw.cli:main"

[project.urls]
Homepage = "https://github.com/mousebrains/Slocum-tpw"
Issues = "https://github.com/mousebrains/Slocum-tpw/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "slocum_tpw.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
